<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">
">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/techshop"
            android:layout_marginTop="50dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="25dp"
            android:textColor="@color/purple_700"
            android:gravity="center_horizontal"
            android:layout_marginBottom="30dp" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/username"
            android:background="@drawable/rounded_border"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:background="@drawable/rounded_border"/>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

        <Button
            android:id="@+id/tv_forgot"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_border"
            android:gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:text="@string/forgot"
            android:textColor="@color/black"
            android:textSize="10dp"
            android:theme="@style/Theme.blanco"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginVertical="5dp"/>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:theme="@style/Theme.Prueba"/>
    </LinearLayout>

</LinearLayout>